<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrderActivity">

    <EditText
        android:id="@+id/orderDateEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/order_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/itemNumberEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderDateEdtTxt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/item_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/itemDescriptionEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemNumberEdtTxt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/item_description"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/originCountryEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemDescriptionEdtTxt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/origin_country"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/departureDateEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/originCountryEdtTxt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/departure_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/destinationCountryEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/departureDateEdtTxt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/destination_country"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/estimatedArrivalDateEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/destinationCountryEdtTxt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/estimated_arrival_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/deliveryDateEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/estimatedArrivalDateEdtTxt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/delivery_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/orderStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deliveryDateEdtTxt"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/order_status"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/orderStatusSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deliveryDateEdtTxt"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/orderStatusTextView"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/saveOrderBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderStatusSpinner"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:onClick="saveOrderClicked"
        android:text="@string/save"
        tools:ignore="VisualLintButtonSize" />
</RelativeLayout>
