<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddShipmentActivity">

    <TextView
        android:id="@+id/orderNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/shipmentNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderNumberTextView"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/shipmentDateEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shipmentNumberTextView"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/shipment_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/shipmentTimeEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shipmentDateEdtTxt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/shipment_time"
        android:inputType="datetime"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/shipmentStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shipmentTimeEdtTxt"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/shipment_status"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/shipmentStatusSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shipmentTimeEdtTxt"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/shipmentStatusTextView"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/saveShipmentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shipmentStatusTextView"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:onClick="saveShipmentClicked"
        android:text="@string/save"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>